tests/e2e/negative/n0009_const_reassignment.cryo
// @test: const_reassignment
// @expect: compile_fail
// @mode: raw
// @description: Reassigning const variable should fail
// @tags: variables, const, errors

namespace NegConstReassign;

function main() -> int {
    const x: int = 5;
    x = 10;
    return 0;
}
